--- a/crates/rtps-elements/Cargo.toml
+++ b/crates/rtps-elements/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rtps-elements"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 description = "Core message data structures generated from RTPS IDL."
@@ -16,4 +16,4 @@ serde = "1.0"
 serde_derive = "1.0"
 
 [build-dependencies]
-rtps-idl = { path = "../rtps-idl", version = "0.2.0" }
+rtps-idl = { path = "../rtps-idl", version = "^0.2" }
