--- a/crates/rtps-idl/Cargo.toml
+++ b/crates/rtps-idl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rtps-idl"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Frank Rehberger <frehberg@gmail.com>"]
 edition = "2018"
 description = "RTPS IDL to Rust code generator library"
@@ -13,6 +13,6 @@ repository = "https://github.com/frehberg/rtps-gen.git"
 
 [dependencies]
 pest = "^1.0"
-rtps-idl-grammar = { path = "../rtps-idl-grammar", version = "0.2" }
+rtps-idl-grammar = { path = "../rtps-idl-grammar", version = "^0.2" }
 log = { version = "0.4", features = ["std", "serde"] }
 linked-hash-map = "^0.5"
